--- a/env.example
+++ b/env.example
@@ -5,6 +5,10 @@ DATABASE_URL="file:./dev.db"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here"
 
+# Google OAuth
+GOOGLE_CLIENT_ID="tu-google-client-id"
+GOOGLE_CLIENT_SECRET="tu-google-client-secret"
+
 # URL base de la aplicación (para links de confirmación)
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
